--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,5 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - run:  pip install --quiet --upgrade --requirement requirements.txt |
+              python -m unittest --verbose --failfast
