--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
         uses: docker/login-action@v3  # Utilise l'action de login Docker
         with:  # Avec ces paramètres
           registry: ghcr.io  # URL du registre
-          username: ${{ github.actor }}  # Nom d'utilisateur GitHub
-          password: ${{ secrets.GITHUB_TOKEN }}  # `GITHUB_TOKEN` pour l'authentification
+          username: ${{ vars.DOCKERHUB_USERNAME }}  # Nom d'utilisateur dockerhub
+          password: ${{ secrets.DOCKERHUB_TOKEN }} # `DOCKERHUB_TOKEN` pour l'authentification
 
       - name: get metadata  # Récupère les métadonnées pour Docker
         id: metadata  # ID pour cette étape
