--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/login-action@v3  # Utilise l'action de login Docker
         with:  # Avec ces paramètres
           registry: ghcr.io  # URL du registre
-          username: ${{ vars.DOCKERHUB_USERNAME }}  # Nom d'utilisateur dockerhub
+          username: ${{ vars.DOCKERHUB_USERNAME }}  # Nom d'utilisateur de dockerhub
           password: ${{ secrets.DOCKERHUB_TOKEN }} # `DOCKERHUB_TOKEN` pour l'authentification
 
       - name: get metadata  # Récupère les métadonnées pour Docker
