--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         with:  # Avec ces paramètres
           registry: ghcr.io  # URL du registre
           username: ${{ vars.DOCKERHUB_USERNAME }}  # Nom d'utilisateur de dockerhub
-          password: ${{ secrets.DOCKERHUB_TOKEN }} # `DOCKERHUB_TOKEN` pour l'authentification
+          password: ${{ secrets.DOCKERHUB_TOKEN }} # `DOCKERHUB_TOKEN` pour l'authentification.
 
       - name: get metadata  # Récupère les métadonnées pour Docker
         id: metadata  # ID pour cette étape
